--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
+    <!-- Application name -->
     <string name="app_name">Charplan</string>
+    <!-- Menu strings -->
+    <string name="menu_settings">Settings</string>
+    <string name="menu_level1">Make Level 1</string>
+    <string name="menu_level50">Make Level 50</string>
 </resources>
