Adding SkillsFragment and reworked database
DB progress:
- Classes done
- Specs done
- Skills done up to Hib Reg Spec

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="hibernia">Hibernia</string>
     <string name="midgard">Midgard</string>
     <string name="unknown">Unknown</string>
+    <!-- SkillsFragment strings -->
+    <string name="skills_minus">-</string>
+    <string name="skills_plus">+</string>
 </resources>
